rename image url

--- a/tasks/templates/partials/upload_file_popup.html
+++ b/tasks/templates/partials/upload_file_popup.html
@@ -18,7 +18,7 @@
             </form>
         </div>
         {% if image_url %}
-            <p>File uploaded at: <a href="{{ image_url }}">{{ image_url }}</a></p>
+            <p>File uploaded at: <a href="{{ file_url }}">{{ file_url }}</a></p>
         {% endif %}
     </div>
 {% endblock %}
