--- a/tasks/templates/profile_image.html
+++ b/tasks/templates/profile_image.html
@@ -1,12 +1,16 @@
 {% extends 'base_content.html' %}
+{% load static %}
 {% block content %}
     <div class="col-12">
         <div class="row justify-content-center mt-5">
             <div class="col-9">
-                <a href="https://en.gravatar.com/profile/avatars" target="_blank" title="Change your Gravatar">
-                    <img src="{{ user.profile_image }}" alt="Gravatar of {{ user.username }}"
-                         class="rounded-circle profile-image mb-3">
-                </a>
+                {% if user.profile_image %}
+                    <img src="{{ user.profile_image }}" alt="Profile image of {{ user.username }}"
+                         class="rounded-circle profile-image mb-3 large_image" >
+                {% else %}
+                    <img src="{{ settings.DEFAULT_IMAGE_URL }}" alt="Profile image of {{ user.username }}"
+                         class="rounded-circle profile-image mb-3 large_image" >
+                {% endif %}
                 <div class="profile-text mt-4">
                     <h3 class="profile-title">{{ user.full_name }}</h3>
                     <p class="profile-title mt-1 profile-username">{{ user.username }}</p>
