--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -23,12 +23,12 @@
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link" href="#" id="user-account-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          {% if user.profile_image %}
-            <img src="{{ user.profile_image }}" alt="Profile image of {{ user.username }}"
-             class="rounded-circle small_image mb-1">
-          {% else %}
-            <img src="{{ settings.DEFAULT_IMAGE_URL }}" alt="Profile image of {{ user.username }}"
+          {% if user.avatar_url == settings.DEFAULT_IMAGE_URL %}
+            <img src="{{ user.avatar_url }}" alt="Profile image of {{ user.username }}"
              class="rounded-circle small_image mb-1 invert_image">
+          {% else %}
+            <img src="{{ user.avatar_url }}" alt="Profile image of {{ user.username }}"
+             class="rounded-circle small_image mb-1">
           {% endif %}
       </a>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-account-dropdown">
