--- a/static/css/filelist.css
+++ b/static/css/filelist.css
@@ -7,7 +7,7 @@
     margin-bottom: 0;
     opacity: 0;
     transform: translateY(20px);
-    width: 140%;
+    width: 200%;
     transition: opacity 0.5s ease, transform 0.5s ease;
     border: 1px solid #ccc;
 }
@@ -39,6 +39,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     display: block;
     margin: 10px;
+    width: 600px;
 }
 
 .list-group-item {
@@ -52,7 +53,7 @@
     width: 50px;
     height: 50px;
     padding: 0;
-    margin-right: 5px;;
+    margin-bottom: 2px;
 }
 
 .button-container {
@@ -61,19 +62,26 @@
 }
 
 .d-flex{
-    margin:5px;
+    margin:0;
 }
 
 textarea{
-  width: 100%;
-  height: 150px;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  font-size: 16px;
-  resize: none;
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
 }
 
+.mb-2{
+    margin-bottom: 2px;
+}
+
+.item-content{
+    margin-top: 2px;
+}
 
