--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -21,23 +21,27 @@
                 </form>
             </div>
 
-            <br>
             <div class="list-container custom-list-size">
                 <div class="list-group" id="fileList">
                     {% for upload in uploads %}
                     <div class="flex-column flex-md-row list-item" aria-current="true">
-                        <a href="{{ upload.file.url }}" class="list-group-item" data-upload-time="{{ upload.uploaded_at }}" target="_blank">
-                            <div class="d-flex gap-2 w-100">
+                        <div class="p-3 gap-2 w-100">
+                            <a href="{{ upload.file.url }}" class="list-group-item" data-upload-time="{{ upload.uploaded_at }}" target="_blank">
                                 <div class="item-content">
-                                    <img src="{% static '/image/pdf_icon_svg.png' %}" alt="pdf" width="32" height="32" class="rounded-circle flex-shrink-0">
+                                    <div class="d-flex flex-wrap w-100 justify-content-between align-items-center">
+                                        <div class="mb-1">
+                                            <img src="{% static '/image/pdf_icon_svg.png' %}" alt="pdf" width="32" height="32" class="rounded-circle flex-shrink-0">
+                                        </div>
+                                        <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
+                                    </div>
                                     <h6 class="mb-0"><strong>{{ upload.file.name }}</strong></h6>
                                     <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span class="upload-time">{{ upload.uploaded_at }}</span></p>
                                     <p class="mb-0 opacity-75"><strong>Comment:</strong> {{ upload.comments }}</p>
                                 </div>
-                                <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
-                            </div>
-                        </a>
-                        <div class="button-container">
+                            </a>
+                        </div>
+
+                        <div class="button-container p-2">
                             <!--Delete PDF-->
                             <form action="{% url 'delete_upload' upload.id %}" method="post" class="d-inline">
                                 {% csrf_token %}
@@ -58,6 +62,7 @@
                     {% endfor %}
                 </div>
             </div>
+
 
         </div>
     </div>
