--- a/static/css/filelist.css
+++ b/static/css/filelist.css
@@ -53,7 +53,9 @@
     width: 50px;
     height: 50px;
     padding: 0;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    border-radius: 35px;
 }
 
 .button-container {
