--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -173,6 +173,11 @@ ul.teams-list li {
     width: 120px;
 }
 
+.medium_image{
+    height: 70px;
+    width: 70px;
+}
+
 .small_image{
     height: 20px;
     width: 20px;
@@ -180,4 +185,16 @@ ul.teams-list li {
 
 .invert_image{
     filter: invert(100%);
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
 }
