--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -187,9 +187,6 @@ ul.teams-list li {
     filter: invert(100%);
 }
 
-input[type="file"] {
-    display: none;
-}
 
 .custom-file-upload {
     border-radius: 5px;
@@ -197,4 +194,15 @@ input[type="file"] {
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
+}
+
+.input-file label {
+    cursor: pointer;
+}
+
+.input-file input[type="file"] {
+    opacity: 0;
+    width: 0.1px;
+    height: 0.1px;
+    position: absolute;
 }
