--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -3,6 +3,7 @@
     <!-- A vertical navbar -->
         <!-- Links -->
         {% url 'dashboard' as dashboard %}
+        {% url 'share_file' as share_file %}
         {% url 'filelist' as filelist %}
         {% url 'shared_file_list' as shared_file_list %}
         {% url 'team_list' as team_list %}
@@ -15,6 +16,13 @@
                     <a class="nav-link active text-center" aria-current="page" href="{% url 'dashboard' %}">Home</a>
                 {%else%}
                     <a class="nav-link text-center" aria-current="page" href="{% url 'dashboard' %}">Home</a>
+                {% endif %}
+            </li>
+            <li class="nav-item">
+                {% if request.path == share_file %}
+                    <a class="nav-link active text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
+                {%else%}
+                    <a class="nav-link text-center" aria-current="page" href="{% url 'share_file' %}">Share</a>
                 {% endif %}
             </li>
             <li class="nav-item">
