--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -20,7 +20,7 @@
                     {% csrf_token %}
                     <div class="row justify-content-start">
                         <div class="col-3 input-file">
-                            <label for="file-upload" class="custom-file-upload mt-3">
+                            <label class="custom-file-upload mt-3">
                                 <i class="bi bi-cloud-upload" style="cursor: pointer"></i>
                                 {{ form.file.label_tag }}{{ form.file }}
                             </label>
