--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -63,5 +63,5 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'js/popup_window_invite.js' %}"></script>
+    <script src="{% static 'js/popup_window.js' %}"></script>
 {% endblock %}
