--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -31,7 +31,7 @@
                                 <div class="item-content">
                                     <div class="d-flex flex-wrap w-100 justify-content-between align-items-center">
                                         <div class="mb-1">
-                                            <img src="{% static '/image/pdf_icon_svg.png' %}" alt="pdf" width="32" height="32" class="rounded-circle flex-shrink-0">n
+                                            <img src="{% static '/image/pdf_icon_svg.png' %}" alt="pdf" width="32" height="32" class="rounded-circle flex-shrink-0">
                                         </div>
                                         <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
 
