Revert "Merge branch 'main' into wireframe"
This reverts commit 9b14524b4e73c4fb4c1d5d09e29f9a5e351fa985, reversing
changes made to 641d8102c239d5b21eb46a5c28eeb51d8bce65b3.

--- a/tasks/templates/list_team.html
+++ b/tasks/templates/list_team.html
@@ -38,5 +38,5 @@
         </div>
 
     </div>
-    <script src="{% static 'js/popup_window.js' %}"></script>
+    <script src="{% static 'js/popup_window_create_team.js' %}"></script>
 {% endblock %}
