--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -118,6 +118,7 @@
             </div>
         </div>
     </div>
+
     <div class="offcanvas offcanvas-end" tabindex="-1" id="uploadTeamPdf" aria-labelledby="uploadTeamPdf">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">Upload PDF to Team {{team.name}}</h5>
@@ -128,5 +129,5 @@
         </div>
     </div>
 
-    <script src="{% static 'js/popup_window.js' %}"></script>
+    <script src="{% static 'js/popup_window_invite.js' %}"></script>
 {% endblock %}
