--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -9,8 +9,8 @@
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <title>Task Manager</title>
   </head>
-{#  <body class="{{user.theme_preference}}">#}
-{#  </body>#}
+  <body class="{{user.theme_preference}}">
+  </body>
     {% block body %}
     {% endblock %}
     <script src="{% static 'js/filelist.js' %}"></script>
