--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -1,23 +1,23 @@
 {% extends 'base_content_without_message.html' %}
 {% block content %}
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/dashboard.css' %}">
+
 
 <div class="col-12 text-center">
     <h1>PDF Upload</h1>
-
-    <div class="table-container shadow p-3 mb-5 bg-body-tertiary rounded" style="display: flex; flex-direction: column; align-items: center;">
-{#            <li class="nav-item" role="presentation"><a href="{% url 'share_file' %}" id="content-selector-tab-template" role="tab" data-rr-ui-event-key="template" aria-controls="content-selector-tabpane-template" aria-selected="false" class="nav-link" tabindex="-1">Share</a></li>#}
-        <table class="table table-hover pdf-table" style="margin-bottom: 10px;">
+</div>
+<div class="table-container shadow p-3 mb-5 bg-body-tertiary rounded">
+        <table class="pdf-table">
             <tbody>
                 <tr>
-                    <td colspan="5" tabindex="0" style="flex: 1 1 0%; display: flex; flex-direction: column; align-items: center; padding: 100px 400px; border-width: 3px; border-radius: 8px; border-color: rgb(220, 155, 255); border-style: dashed; background-color: rgb(250, 250, 250); color: rgb(189, 189, 189); outline: none; transition: border 0.24s ease-in-out 0s; cursor: pointer;">
-                        <input id="pdf-file-input" accept="application/pdf, .pdf" multiple="" type="file" autocomplete="off" tabindex="-1" style="display: none;">
+                    <td class="pdf-upload-area" colspan="5" id="pdf-upload-area" tabindex="0">
                         <div class="flex" style="width: 70px; height: 70px; overflow: hidden;">
                             <img class="icon faded p-2" src="{% static '/image/pdf_icon_svg.png' %}" alt="PDF" style="max-width: 100%; max-height: 100%;">
                         </div>
                         <div class="mt-5">
                             <div class="section" id="pdf-file-upload-section">
-                                <form action="{% url 'dashboard' %}" method="post" enctype="multipart/form-data">
+                                <form id="pdf-upload-form" action="{% url 'dashboard' %}" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <p>{{ form.non_field_errors }}</p>
                                     {% if file_url %}
@@ -25,12 +25,13 @@
                                     {% else %}
                                         <p>{{ form.file.help_text }}</p>
                                     {% endif %}
-                                    <div class="col-3 input-file">
-                                            <label class="custom-file-upload mt-3">
-                                                <i class="bi bi-cloud-upload" style="cursor: pointer"></i>
-                                                {{ form.file.label_tag }}{{ form.file }}
-                                            </label>
+                                    <div class="col-3 input-file" style="display: none;">
+                                        {{ form.file }}
                                     </div>
+                                    <label class="custom-file-upload mt-3">
+                                        <i class="bi bi-cloud-upload" style="cursor: pointer"></i>
+                                        <span>Select PDF file</span>
+                                    </label>
                                     <p><input id="pdf-upload-button" class="mt-3 d-block ps-4 pe-4 btn btn-success" type="submit" value="Upload"/></p>
                                 </form>
                             </div>
@@ -39,8 +40,30 @@
                 </tr>
             </tbody>
         </table>
-        </div>
     </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('pdf-upload-area').addEventListener('click', function() {
+            document.querySelector('.input-file input[type=file]').click();
+        });
+
+        document.querySelector('.input-file input[type=file]').addEventListener('change', function() {
+            document.getElementById('pdf-upload-form').submit();
+        });
+    });
+
+        document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('pdf-upload-area').addEventListener('click', function() {
+            document.getElementById('pdf-file-input').click();
+        });
+
+        document.getElementById('pdf-upload-area').addEventListener('change', function() {
+            document.getElementById('pdf-upload-form').submit();
+        });
+    });
+</script>
+
 
 
 {% endblock %}
