--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -2,68 +2,40 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/dashboard.css' %}">
+<script src="{% static '/js/dashboard.js' %}"></script>
 
 
 <div class="col-12 text-center">
     <h1>PDF Upload</h1>
 </div>
-<div class="table-container shadow p-3 mb-5 bg-body-tertiary rounded">
-        <table class="pdf-table">
-            <tbody>
-                <tr>
-                    <td class="pdf-upload-area" colspan="5" id="pdf-upload-area" tabindex="0">
-                        <div class="flex" style="width: 70px; height: 70px; overflow: hidden;">
-                            <img class="icon faded p-2" src="{% static '/image/pdf_icon_svg.png' %}" alt="PDF" style="max-width: 100%; max-height: 100%;">
+<div class="table-container shadow p-3 mb-5 bg-body-tertiary rounded" style='margin-left: 140px; margin-top: 50px'>
+    <table class="pdf-table">
+        <tbody>
+            <tr>
+                <td class="pdf-upload-area" colspan="5" id="pdf-upload-area" tabindex="0">
+                    <div class="flex" style="width: 70px; height: 70px; overflow: hidden;">
+                        <img class="icon faded p-2" src="{% static '/image/pdf_icon_svg.png' %}" alt="PDF" style="max-width: 100%; max-height: 100%;">
+                    </div>
+                    <div class="mt-5">
+                        <div class="section" id="pdf-file-upload-section">
+                            <form id="pdf-upload-form" action="{% url 'dashboard' %}" method="post" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <p>{{ form.non_field_errors }}</p>
+                                {% if file_url %}
+                                    <p>File uploaded at: <a href="{{ file_url }}">{{ file_url|truncatechars:20 }}</a></p>
+                                {% else %}
+                                    <p>{{ form.file.help_text }}</p>
+                                {% endif %}
+                                <div class="col-3 input-file" style="display: none;">
+                                    {{ form.file }}
+                                </div>
+{#                                <p><input id="pdf-upload-button" class="mt-3 d-block ps-4 pe-4 btn btn-success" type="submit" value="Upload"/></p>#}
+                            </form>
                         </div>
-                        <div class="mt-5">
-                            <div class="section" id="pdf-file-upload-section">
-                                <form id="pdf-upload-form" action="{% url 'dashboard' %}" method="post" enctype="multipart/form-data">
-                                    {% csrf_token %}
-                                    <p>{{ form.non_field_errors }}</p>
-                                    {% if file_url %}
-                                        <p>File uploaded at: <a href="{{ file_url }}">{{ file_url|truncatechars:20 }}</a></p>
-                                    {% else %}
-                                        <p>{{ form.file.help_text }}</p>
-                                    {% endif %}
-                                    <div class="col-3 input-file" style="display: none;">
-                                        {{ form.file }}
-                                    </div>
-                                    <label class="custom-file-upload mt-3">
-                                        <i class="bi bi-cloud-upload" style="cursor: pointer"></i>
-                                        <span>Select PDF file</span>
-                                    </label>
-                                    <p><input id="pdf-upload-button" class="mt-3 d-block ps-4 pe-4 btn btn-success" type="submit" value="Upload"/></p>
-                                </form>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        document.getElementById('pdf-upload-area').addEventListener('click', function() {
-            document.querySelector('.input-file input[type=file]').click();
-        });
-
-        document.querySelector('.input-file input[type=file]').addEventListener('change', function() {
-            document.getElementById('pdf-upload-form').submit();
-        });
-    });
-
-        document.addEventListener('DOMContentLoaded', function() {
-        document.getElementById('pdf-upload-area').addEventListener('click', function() {
-            document.getElementById('pdf-file-input').click();
-        });
-
-        document.getElementById('pdf-upload-area').addEventListener('change', function() {
-            document.getElementById('pdf-upload-form').submit();
-        });
-    });
-</script>
-
-
-
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 {% endblock %}
