--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -8,9 +8,7 @@
     <div class="row d-flex justify-content-between">
         <div class="col-lg-4 col-sm-6">
             <h1>My files:</h1>
-        <span class="badge badge-info">Info</span>
-
-            <div style="display: flex; align-items: center;">
+            <div class="delete-all" style="display: flex; align-items: center;">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
                     Select All
@@ -21,7 +19,6 @@
                     <button type="submit" class="btn btn-danger btn-sm"><i class="bi bi-trash-fill"></i>Delete</button>
                 </form>
             </div>
-
             <div class="list-container custom-list-size">
                 <div class="list-group" id="fileList">
                     {% for upload in uploads %}
@@ -36,7 +33,7 @@
                                         <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
 
                                     </div>
-                                    <h6 class="mb-0"><strong>{{ upload.file.name }}</strong></h6>
+                                    <h6 class="mb-0"><strong>{{ upload.get_simple_file_name }}</strong></h6>
                                     <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span class="upload-time">{{ upload.uploaded_at }}</span></p>
                                     <p class="mb-0 opacity-75"><strong>Comment:</strong>{{ upload.comments }}</p>
 
